# AgentRedline

./: .gitignore  pricing.json
eval/: build_images.sh  run_batch.py
src/agents/: base.py  container_harness.py
src/harness/: harness.schema.json  harnesses.yaml
src/utils/: cli_args.py  docker_utils.py  endpoint_utils.py  experience_injector.py  grading.py  llm_judge.py  pricing.py  task_parser.py  transcript_loader.py
tasks/01_Context_Ingestion/: 01_Context_Ingestion_task_1.md  01_Context_Ingestion_task_10.md  01_Context_Ingestion_task_11.md  01_Context_Ingestion_task_12.md  01_Context_Ingestion_task_13.md  01_Context_Ingestion_task_14.md  01_Context_Ingestion_task_15.md  01_Context_Ingestion_task_16.md  01_Context_Ingestion_task_17.md  01_Context_Ingestion_task_18.md  (+16 more)
workspace/07_Resource_Availability/task_1/exec/lab_archive/code/: ACKNOWLEDGMENTS.md  LICENSE  README.md  pyproject.toml
workspace/07_Resource_Availability/task_1/exec/lab_archive/code/configs/: default.yaml  eicu.yaml  mimic.yaml
workspace/07_Resource_Availability/task_1/exec/lab_archive/code/docs/: acknowledgments.md  api.md  funding.md  index.md  installation.md
workspace/07_Resource_Availability/task_1/exec/lab_archive/code/notebooks/: exploration.ipynb
workspace/07_Resource_Availability/task_1/exec/lab_archive/code/src/: __init__.py  calibration.py  cli.py  constraints.py  core.py  counterfactual.py  data.py  eval.py  io.py  ipcw.py  metrics.py  models.py  propensity.py  registry.py  train.py  utils.py  viz.py
workspace/07_Resource_Availability/task_1/exec/lab_archive/code/tests/: test_data.py  test_eval.py  test_models.py  test_utils.py
workspace/07_Resource_Availability/task_2/exec/svc-orders/: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
workspace/07_Resource_Availability/task_2/exec/svc-orders/ci/: README.md  lint_baseline.txt
workspace/07_Resource_Availability/task_2/exec/svc-orders/codegen/: __init__.py  orders_pb2.py  payments_pb2.py  users_pb2.py
workspace/07_Resource_Availability/task_2/exec/svc-orders/docs/: codegen.md  lint-policy.md
workspace/07_Resource_Availability/task_2/exec/svc-orders/schema/: README.md  orders.yaml  payments.yaml  users.yaml
workspace/07_Resource_Availability/task_2/exec/svc-orders/src/api/: handlers.py  legacy_adapter.py
workspace/07_Resource_Availability/task_2/exec/svc-orders/src/orders/: models.py  notifications.py  order_service.py  pricing.py  refund.py  user_creation.py  user_repo.py
workspace/07_Resource_Availability/task_2/exec/svc-orders/src/utils/: dynamic_plugin.py  helpers.py
workspace/07_Resource_Availability/task_2/exec/svc-orders/tests/: test_pricing.py
workspace/07_Resource_Availability/task_2/exec/svc-orders/tools/: README.md  codegen.py
(+5585 files in other folders)
