[project]
name = "cf-pathway"
version = "0.4.0"
description = "Counterfactual pathway recommender for tabular ICU records."
authors = [{name = "Yui Tanaka", email = "y.tanaka@brookgate.edu"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "gurobipy>=10.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]
